--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "redux-persist": "^6.0.0",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
