--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
     "@mui/x-data-grid": "^5.17.14",
+    "@mui/x-date-pickers": "^5.0.10",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +18,7 @@
     "@types/node": "^16.18.4",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "dayjs": "^1.11.7",
     "graphql": "^16.6.0",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
