--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-select": "^5.7.0",
     "react-use": "^17.4.0",
     "redux-persist": "^6.0.0",
+    "store": "^2.0.12",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
